--- a/package.json
+++ b/package.json
@@ -73,6 +73,11 @@
 				"command": "clarifai.addImageToClarifai",
 				"category": "Clarifai",
 				"title": "Upload to Clarifai"
+			},
+			{
+				"command": "clarifai.addTextToClarifai",
+				"category": "Clarifai",
+				"title": "Upload Text to Clarifai"
 			}
 		],
 		"menus": {
@@ -88,6 +93,13 @@
 					"command": "clarifai.addImageToClarifai",
 					"group": "navigation",
 					"when": "resourceExtname == .jpeg || resourceExtname == .jpg || resourceExtname == .png || resourceExtname == .gif || resourceExtname == .bmp"
+				}
+			],
+			"explorer/context": [
+				{
+					"command": "clarifai.addTextToClarifai",
+					"group": "navigation",
+					"when": "resourceExtname == .yml || resourceExtname == .yaml || resourceExtname == .py || resourceExtname == .go || resourceExtname == .js || resourceExtname == .ts"
 				}
 			]
 		}
